2011-08-10  Nat Duca  <nduca@chromium.org>

        [chromium] Add WebThread to WebKitClient
        https://bugs.webkit.org/show_bug.cgi?id=66013

        Reviewed by Darin Fisher.

        * public/WebKitClient.h:
        (WebKit::WebKitClient::createThread):
        * public/WebThread.h: Added.
        (WebKit::WebThread::~WebThread):

2011-08-11  John Bauman  <jbauman@chromium.org>

        Readback composited webgl results for printing
        https://bugs.webkit.org/show_bug.cgi?id=65658

        Reviewed by James Robinson.

        Add support for reading from the composited version of a canvas.

        * public/WebGraphicsContext3D.h:
        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::paintFramebufferToCanvas):
        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::GraphicsContext3DInternal):
        (WebCore::GraphicsContext3DInternal::paintFramebufferToCanvas):
        (WebCore::GraphicsContext3DInternal::paintRenderingResultsToCanvas):
        (WebCore::GraphicsContext3DInternal::paintCompositedResultsToCanvas):
        (WebCore::GraphicsContext3DInternal::paintRenderingResultsToImageData):
        (WebCore::GraphicsContext3DInternal::reshape):
        * src/GraphicsContext3DInternal.h:

2011-08-05  Nat Duca  <nduca@chromium.org>

        [chromium] Make WebViewImpl point at CCLayerTreeHost and related separation
        https://bugs.webkit.org/show_bug.cgi?id=65791

        With this patch, LayerRendererChromium becomes increasingly responsible
        for rendering, while render scheduling and tree hosting moves into the
        CCLayerTreeHost.

        Reviewed by James Robinson.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::WebViewImpl):
        (WebKit::WebViewImpl::resize):
        (WebKit::WebViewImpl::animate):
        (WebKit::WebViewImpl::doPixelReadbackToCanvas):
        (WebKit::WebViewImpl::paint):
        (WebKit::WebViewImpl::composite):